Project-101-kittens-carousel-static-website-ec2/cfn-template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  This CloudFormation Template was written for running Kittens Carousel Static Website on EC2. Kittens Carousel Static Website will be deployed on Amazon Linux 2 (XXXXXXXXXXXX) EC2 Instance with custom security group which allows http connections on port 80 and ssh port 22 from anywhere. Kittens Carousel Static Website 
  is downloaded from my Public Github repository, then deployed on Apache Web Server. Rihanna says Work! Work! Work!
Parameters:
  
Resources:
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP for Apache Web Server and SSH for secure connection # Required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  WebServerHost:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0005e0cfe09cc9050
      InstanceType: t2.micro
      KeyName: hsyn-key-pair
      SecurityGroupIds:
        - !Ref WebServerSecurityGroup
      Tags:
        -                        
          Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack
      UserData: 
        Fn::Base64: |
            #! /bin/bash
            yum update -y
            yum install httpd -y
            cd /var/www/html
            wget https://raw.githubusercontent.com/huseyingultekin/my-projects/main/Project-101-kittens-carousel-static-website-ec2/static-web/index.html
            wget https://raw.githubusercontent.com/huseyingultekin/my-projects/main/Project-101-kittens-carousel-static-website-ec2/static-web/cat0.jpg
            wget https://raw.githubusercontent.com/huseyingultekin/my-projects/main/Project-101-kittens-carousel-static-website-ec2/static-web/cat1.jpg
            wget https://raw.githubusercontent.com/huseyingultekin/my-projects/main/Project-101-kittens-carousel-static-website-ec2/static-web/cat2.jpg
            wget https://raw.githubusercontent.com/huseyingultekin/my-projects/main/Project-101-kittens-carousel-static-website-ec2/static-web/cat3.png
            systemctl start httpd
            systemctl enable httpd

Outputs:
  WebsiteURL:
    Value: !Sub 
      - http://${PublicAddress}
      - PublicAddress: !GetAtt WebServerHost.PublicDnsName
    Description: Kittens Carousel Application URL
